--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body {
   gap: 5px;
 }
 
+.gameboardContainer {
+  display: flex;
+  justify-content: space-around;
+  gap: 15px;
+}
+
 .gameboard_field {
   background-color: sienna;
   width: 50px;
