--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,11 @@ body {
   width: 50px;
   height: 50px;
 }
+
+.ship {
+  background-color: #282828;
+}
+
+.hit {
+  background-color: sandybrown;
+}
