--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,46 @@
 }
 
 body {
-  background-color: purple;
+  background-color: #282828;
+  margin: 0px;
+  padding: 0px;
+  color: #fbf1c7;
+}
+
+h1 {
+  text-align: center;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: minmax(200px, 1fr) 5fr;
+  grid-template-rows: 100vh;
+}
+
+.sidebar {
+  grid-row: 1 / 3;
+  background-color: #7c6f64;
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu {
+  margin: 10px;
+}
+
+.menu-button {
+  padding: 5px 10px;
+  background-color: #fe8019;
+  margin: 5px 0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .gameboard {
@@ -17,25 +56,26 @@ body {
 .gameboardContainer {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   gap: 15px;
 }
 
 .gameboard_field {
-  background-color: sienna;
+  background-color: #83a598;
   width: 50px;
   height: 50px;
 }
 
 .ship {
-  background-color: #282828;
+  background-color: #504945;
 }
 
 .hit {
-  background-color: brown; 
+  background-color: #fb4934; 
 }
 
 .sunk {
-  background-color: greenyellow; 
+  background-color: #cc241d; 
 }
 
 .miss {
@@ -59,7 +99,9 @@ body {
   position: absolute;
   top: 30%;
   left: 30%;
+  width: 600px;
   background-color: white;
+  color: #282828;
 }
 
 .sizeButtonContainer {
@@ -69,5 +111,5 @@ body {
 
 .sizeButton {
   height: var(--sizeSelectBox);
-  background-color: saddlebrown;
+  background-color: #83a598;
 }
